<resources>
    <string name="app_name">My Application</string>
    <string name="login">Login</string>
    <string name="sign_up">SignUp</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="todo">TODO</string>
    <string name="sign_up1">Sign Up</string>
    <string name="textview">TextView</string>
    <string name="forgot_password1">forgot password ?</string>
    <string name="login_screen">Login Screen</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="username1">Username</string>
    <string name="email">Email</string>
    <string name="sign_up2">Sign Up</string>
    <string name="password_must_have_contain_atleast_8_letters_in_that_one_uppercase_character_one_special_character_and_other_any_digit">password must have contain atleast 8 letters in that one Uppercase character,one special character and other any digit</string>
    <string name="phone_no">Phone no</string>
    <string name="sign_up3">Sign Up</string>
    <string name="login2">Login</string>
    <string name="password1">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password2">Password</string>
    <string name="username2">Username</string>
    <string name="login3">Login</string>
    <string name="login4">Login</string>
    <string name="sign_up4">sign Up</string>
    <string name="login5">login5</string>
    <string name="myapplication">value1</string>
    <string name="semester1">Semester</string>
    <string name="my_application">values</string>
    <string name="sem_1">values</string>
    <string name="Semester">Semester</string>
    <string name="sem_2">SEM-1</string>
    <string name="todo1">TODO</string>
    <string name="semester">Semester</string>
    <string name="sem_3">SEM-1</string>
    <string name="sem_4">SEM-2</string>
    <string name="sem_5">SEM-2</string>
    <string name="sem_6">SEM-6</string>
    <string name="sem_7">SEM-5</string>
    <string name="sem_8">SEM-4</string>
    <string name="sem_9">SEM-3</string>
    <string name="sem_10">SEM-7</string>
    <string name="sem_11">SEM-8</string>
    <string name="sem_13">SEM-8</string>
    <string name="sem_12">SEM-7</string>
    <string name="Sem_2">SEM-2</string>
    <string name="branch1">Branch</string>
    <string name="computer">Computer</string>
    <string name="computer1">Computer</string>
    <string name="it">IT</string>
    <string name="civil">civil</string>
    <string name="electrical">Electrical</string>
    <string name="ec">EC</string>
    <string name="mechnical">Mechnical</string>
    <string name="select_branch">Select Branch</string>
    <string name="select_class">Select Class</string>
    <string name="class_b">Class-B</string>
    <string name="class_d">Class-D</string>
    <string name="class_e">Class-E</string>
    <string name="class_b1">Class-b</string>
    <string name="automobile">Automobile</string>
    <string name="home_page">Home Page</string>
    <string name="send_me_otp">SEND ME OTP</string>
    <string name="otp">OTP</string>
    <string name="email1">Email</string>
    <string name="phone_no1">Phone No</string>
    <string name="write_otp">Write OTP</string>
    <string name="select_semester">Select Semester</string>
    <string name="reset_password">Reset Password</string>
    <string name="password3">Password</string>
    <string name="confirm_password1">Confirm Password</string>
    <string name="reset_password1">Reset Password</string>
    <string name="new_password">New password</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="signup">signup</string>
</resources>
