<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Send_OTP"
    android:background="@drawable/bg_home">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="255dp"
        android:layout_height="65dp"
        android:fontFamily="sans-serif"
        android:text="@string/otp"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="47sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19" />


    <Button
        android:id="@+id/bt"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:focusable="true"
        android:text="@string/send_me_otp"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.63"
        android:onClick="OTP"/>

    <EditText
        android:id="@+id/edittext1"
        android:layout_width="330dp"
        android:layout_height="45dp"
        android:autofillHints=""
        android:background="@drawable/edittext_bg"
        android:drawableStart="@drawable/ic_email"
        android:gravity="center_horizontal"
        android:hint="@string/email"
        android:inputType="textWebEmailAddress"
        android:orientation="vertical"
        android:paddingTop="4dp"
        android:textAlignment="textStart"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.38"
        tools:ignore="RtlCompat" />

    <EditText
        android:id="@+id/edittext2"
        android:layout_width="330dp"
        android:layout_height="45dp"
        android:autofillHints=""
        android:background="@drawable/edittext_bg"
        android:drawableStart="@drawable/ic_phone"
        android:gravity="center_horizontal"
        android:hint="@string/phone_no1"
        android:orientation="vertical"
        android:paddingTop="4dp"
        android:textAlignment="textStart"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.48000002"
        tools:ignore="RtlCompat"
        android:inputType="phone" />

</androidx.constraintlayout.widget.ConstraintLayout>