<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Class1"
    android:background="@drawable/bg_home">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_class"
        android:textColor="@android:color/black"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.075" />


    <androidx.cardview.widget.CardView
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.149"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.301">

        <ImageView
            android:id="@+id/B"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:contentDescription="@string/todo"
            android:focusable="true"
            app:srcCompat="@drawable/ic_class"/>

        <TextView
            android:id="@+id/Class-B"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal"
            android:layout_marginTop="40dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/class_b"
            android:textColor="@android:color/black"
            android:textSize="20sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.301">

        <TextView
            android:id="@+id/Class-D"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal"
            android:layout_marginTop="40dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/class_d"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/D"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:contentDescription="@string/todo"
            android:focusable="true"
            app:srcCompat="@drawable/ic_class" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:cardCornerRadius="20dp"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.149"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.698">

        <ImageView
            android:id="@+id/E"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:contentDescription="@string/todo"
            android:focusable="true"
            app:srcCompat="@drawable/ic_class" />

        <TextView
            android:id="@+id/Class-E"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal"
            android:layout_marginTop="40dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/class_e"
            android:textColor="@android:color/black"
            android:textSize="20sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.698">

        <ImageView
            android:id="@+id/b"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:contentDescription="@string/todo"
            android:focusable="true"
            app:srcCompat="@drawable/ic_class" />


        <TextView
            android:id="@+id/Class-b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal"
            android:layout_marginTop="30dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/class_b1"
            android:textColor="@android:color/black"
            android:textSize="20sp" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>