<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Branch"
    android:background="@drawable/bg_home">

    <androidx.cardview.widget.CardView
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.149"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.148"
        android:onClick="Class1">

        <TextView
            android:id="@+id/com"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal"
            android:clickable="true"
            android:focusable="true"
            android:onClick="Class1"
            android:layout_marginTop="40dp"
            android:text="@string/computer"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/computer"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:clickable="true"
            android:contentDescription="@string/todo"
            android:focusable="true"
            android:onClick="Class1"
            app:srcCompat="@drawable/ic_computer"
            tools:layout_editor_absoluteX="275dp"
            tools:layout_editor_absoluteY="110dp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.148">

        <TextView
            android:id="@+id/IT1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal"
            android:layout_marginTop="45dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/it"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/IT"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginTop="4dp"
            android:clickable="true"
            android:contentDescription="@string/todo"
            android:focusable="true"
            app:srcCompat="@drawable/ic_laptop" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:cardCornerRadius="20dp"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.703">

        <ImageView
            android:id="@+id/civil"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:contentDescription="@string/todo"
            android:focusable="true"
            app:srcCompat="@drawable/ic_account_balance" />

        <TextView
            android:id="@+id/id9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal"
            android:layout_marginTop="40dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/civil"
            android:textColor="@android:color/black"
            android:textSize="20sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.425">

        <ImageView
            android:id="@+id/electrical"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:contentDescription="@string/todo"
            android:focusable="true"
            app:srcCompat="@drawable/ic_power" />


        <TextView
            android:id="@+id/id10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal"
            android:layout_marginTop="40dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/electrical"
            android:textColor="@android:color/black"
            android:textSize="20sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.149"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.425">

        <TextView
            android:id="@+id/id11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal"
            android:layout_marginTop="40dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/ec"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/EC"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:contentDescription="@string/todo"
            android:focusable="true"
            app:srcCompat="@drawable/ic_phonelink_setup" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.149"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.703">

        <TextView
            android:id="@+id/id12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal"
            android:layout_marginTop="40dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/mechnical"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/mechnical"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:contentDescription="@string/todo"
            android:focusable="true"
            app:srcCompat="@drawable/ic_build" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_branch"
        android:textColor="@android:color/black"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <androidx.cardview.widget.CardView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:onClick="Class1"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.98">

        <ImageView
            android:id="@+id/Automobile"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:contentDescription="@string/todo"
            android:focusable="true"
            app:srcCompat="@drawable/ic_directions_car" />

        <TextView
            android:id="@+id/Auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal"
            android:layout_marginTop="40dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/automobile"
            android:textColor="@android:color/black"
            android:textSize="20sp" />
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>

