<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Reset_Password"
    android:background="@drawable/bg_home">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/reset_password"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="42sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19" />


    <Button
        android:id="@+id/bt1"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:focusable="true"
        android:onClick="Semester"
        android:text="@string/reset_password"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7" />

    <EditText
        android:id="@+id/edittext6"
        android:layout_width="330dp"
        android:layout_height="45dp"
        android:autofillHints=""
        android:background="@drawable/edittext_bg"
        android:drawableStart="@drawable/ic_password"
        android:gravity="center_horizontal"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:textColor="@android:color/black"
        android:orientation="vertical"
        android:paddingTop="4dp"
        android:textAlignment="textStart"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.38"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/password_must_have_contain_atleast_8_letters_in_that_one_uppercase_character_one_special_character_and_other_any_digit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.439" />

    <EditText
        android:id="@+id/edittext7"
        android:layout_width="330dp"
        android:layout_height="45dp"
        android:autofillHints=""
        android:background="@drawable/edittext_bg"
        android:drawableStart="@drawable/ic_password"
        android:gravity="center_horizontal"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:orientation="vertical"
        android:paddingTop="4dp"
        android:textAlignment="textStart"
        android:textColorHint="@android:color/darker_gray"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55"
        tools:ignore="RtlCompat" />


</androidx.constraintlayout.widget.ConstraintLayout>